--- a/android/tick/res/layout/menu.xml
+++ b/android/tick/res/layout/menu.xml
@@ -22,21 +22,21 @@
 	<item android:id="@+id/menu_channel_add"
 		  android:title="@string/menu_channel_add"
 		  android:alphabeticShortcut="@string/menu_channel_add_shortcut"
-		  android:enabled="true"
+		  android:state_enabled="true"
 		  android:orderInCategory="1"
 		  android:icon="@android:drawable/ic_menu_add" />
 		  
 	<item android:id="@+id/menu_preferences"
 		  android:title="@string/menu_preferences"
 		  android:alphabeticShortcut="@string/menu_preferences_shortcut"
-		  android:enabled="true"
+		  android:state_enabled="true"
 		  android:orderInCategory="2"
 		  android:icon="@android:drawable/ic_menu_preferences" />
 		  
     <item android:id="@+id/menu_quit"
 		  android:title="@string/menu_quit"
 		  android:alphabeticShortcut="@string/menu_quit_shortcut"
-		  android:enabled="true"
+		  android:state_enabled="true"
 		  android:orderInCategory="3"
 		  android:icon="@android:drawable/ic_menu_close_clear_cancel" />
 </menu>
